# RTEP5-the-raspberry-jam

./: .gitignore  AlsaBufferConverter.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.1f8e119  CTestTestfile.cmake  LICENSE.txt  Makefile  Naming-Convention.txt  README.md  Resources.qrc  Reverb.ui  cmake_install.cmake  delaytab.cpp  delaytab.h  delaytab.ui  distortiontab.cpp  distortiontab.h  distortiontab.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reverbtab.cpp  reverbtab.h  reverbtab.ui  rpj
AlsaBufferConverter/: AlsaBufferConverter.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
AlsaBufferConverter/include/: AlsaBufferConverter.h
AlsaEffects/: AlsaBufferConverter.cpp  AlsaEffects.cpp  CMakeCache.txt  CMakeLists.txt  EffectsManager.cpp  Makefile  PcmAudioBase.cpp  PcmAudioCapture.cpp  PcmAudioPlayback.cpp  SafeQueue.cpp  ThreadBlocker.cpp  cmake_install.cmake
AlsaEffects/include/: AlsaBufferConverter.h  AlsaEffects.h  AlsaListener.h  EffectBase.h  EffectListener.h  EffectsManager.h  GuiListener.h  PcmAudioBase.h  PcmAudioCapture.h  PcmAudioPlayback.h  SafeQueue.h  ThreadBlocker.h
AlsaExamples/: capture.cpp  playback.cpp  sound.raw
AlsaPcmCapture/: AlsaPcmCapture.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  PcmAudioBase.cpp  PcmAudioCapture.cpp  PcmAudioPlayback.cpp  cmake_install.cmake
AlsaPcmCapture/include/: AlsaPcmCapture.h  PcmAudioBase.h  PcmAudioCapture.h  (+1 more)
Effects_Dev/: CMakeLists.txt  Distortion.cpp  Distortion.h  EffectBase.h
deviceTree/: genericstereoaudiocodec.dts  i2smaster.dtbo  i2smaster.dts
hardware/: README.md
src/: AlsaBufferConverter.cpp  AlsaListener.cpp  CMakeLists.txt  Distortion.cpp  EffectsManager.cpp  GuiSimulator.cpp  PcmAudioCapture.cpp  PcmAudioPlayback.cpp  Reverb.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
(+36 files in other folders)
